--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </a>
     </li>
        <li>
-        <a href="#">
+        <a href="#contact">
         <span><i class='bx bx-phone' ></i></span>
         Contato
     </a>
        <li>
-        <a href="#">
+        <a href="#about">
         <span><i class='bx bx-help-circle' ></i></span>
         Sobre
     </a>
@@ -73,7 +73,7 @@
             </div>
             <div class="line"></div>
             <div>
-              <h4>$3.85</h4>
+              <h4>R$8.85</h4>
             </div>
           </div>
           <div class="menu1" data-aos="fade-right" data-aos-duration="1000">
@@ -85,7 +85,7 @@
             </div>
             <div class="line"></div>
             <div>
-              <h4>$3.85</h4>
+              <h4>R$1.25</h4>
             </div>
           </div>
           <div class="menu1" data-aos="fade-right" data-aos-duration="1000">
@@ -97,7 +97,7 @@
             </div>
             <div class="line"></div>
             <div>
-              <h4>$3.85</h4>
+              <h4>R$6.85</h4>
             </div>
           </div>
           <div class="menu1" data-aos="fade-right" data-aos-duration="1000">
@@ -109,7 +109,7 @@
             </div>
             <div class="line"></div>
             <div>
-              <h4>$3.85</h4>
+              <h4>R$9.50</h4>
             </div>
           </div>
           <div class="menu1" data-aos="fade-right" data-aos-duration="1000">
@@ -121,7 +121,7 @@
             </div>
             <div class="line"></div>
             <div>
-              <h4>$3.85</h4>
+              <h4>R$6.85</h4>
             </div>
           </div>
           <div class="menu1" data-aos="fade-right" data-aos-duration="1000">
@@ -134,7 +134,7 @@
             </div>
             <div class="line"></div>
             <div>
-              <h4>$3.85</h4>
+              <h4>R$9.99</h4>
             </div>
         </div>
         <div class="menu-link" data-aos="fade-up" data-aos-duration="1000">
@@ -156,11 +156,44 @@
           ></iframe>
           <form action="" data-aos="fade-left" data-aos-duration="1000">
             <h3>Entre e Contato Conosco</h3>
-            
-            <a href="#" class="btn">Contato Agora</a>
+            <div class="Contato">
+            <h2>email: choccoexpresso@gmail.com </h2>
+            <h2>telefone: 0800 343 8787</h2>
+            <h2>instagram: @choccoespresso</h2>
+          </div>
+            <a href="https://mail.google.com/mail/u/0/#search/choccoexpresso%40gmail.com" class="btn">Contato Agora</a>
           </form>
         </div>
       </section>
+      <h2 class="footer-title">Sobre Nós</h2>
+      <section class="footer">
+        <div id="about" class="footer2" data-aos="fade-down" data-aos-duration="1000">
+          <div class="footer2-logo">
+            <p>
+              A CHOCCO EXPRESSO é um projeto criado pelos alunos do curso técnico de Informática<br /> para a Internet da Escola Estadual Giuseppe Ângelo Bertolli. 
+              <br> Inspirados por grandes cafeterias como Starbucks, eles desenvolveram <br>um espaço que integra o ambiente físico e digital. No local
+              <br> oferece um espaço acolhedor para quem aprecia um bom café. <br>No site, os clientes podem fazer pedidos online, visualizar o menu,
+              <br> e participar de um sistema de fidelidade para ganhar pontos e promoções. <br>O projeto demonstra a aplicação prática do aprendizado,
+              <br> preparando os alunos para o mercado de trabalho com um exemplo real de inovação.
+            </p>
+          </div>
+          <div class="footer2-social">
+            <ul>
+              <li>
+                <a href="https://www.instagram.com/choccoespresso/"><i class='bx bxl-instagram' ></i></a>
+              </li>
+              <li>
+                <a href="https://mail.google.com/mail/u/0/#search/choccoexpresso%40gmail.com"><i class='bx bxl-gmail' ></i></a>
+              </li>
+              <li>
+                <a href="https://github.com/Bimodev"><i class='bx bxl-github'></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
 </body>
+<script src="js/script.js"></script>
 <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
 </html>
