--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <section class="bg-menu" id="menu">
         <div class="heading" data-aos="fade-up" data-aos-duration="1000">
-          <h2>Cafeis e comidas populares. <br>
+          <h2>Cafés e comidas populares. <br>
           <span><i class='bx bxs-food-menu'></i>Cardápio</span></h2>
         </div>
         <div class="menu-flex">
@@ -113,7 +113,7 @@
               <img src="img/menu-2-5.png" alt="" />
             </div>
             <div>
-              <h4>Chocolate Quente</h4>
+              <h4>Chocolate\Q</h4>
             </div>
             <div class="line"></div>
             <div>
@@ -125,7 +125,7 @@
               <img src="img/menu-2-6.png" alt="" />
             </div>
             <div>
-              <h4>Bolo de Chocolate
+              <h4>Bolo\Chocolate
               </h4>
             </div>
             <div class="line"></div>
@@ -151,7 +151,7 @@
             data-aos-duration="1000"
           ></iframe>
           <form action="" data-aos="fade-left" data-aos-duration="1000">
-            <h3>Entre e Contato Conosco</h3>
+            <h3>Entre em Contato Conosco</h3>
             <div class="Contato">
             <h2>email: choccoexpresso@gmail.com </h2>
             <h2>telefone: 0800 343 8787</h2>
