--- a/index.html
+++ b/index.html
@@ -49,10 +49,14 @@
         </div>
     </header>
 
+    <div class="preloader" id="preloader">
+  		<div class="loader" id="loader"></div>
+	</div>
+
     <div class="banner">
          <img src="img/BLOG.jpg">
          <h1>Aproveite melhor o seu tempo e o seu café com CHOCCO EXPRESSO.</h1>
-         <button type="button">Saiba Mais</button>
+         <button type="button"><a href="#contact">Saiba Mais</a></button>
     </div>
     <section class="bg-menu" id="menu">
         <div class="heading" data-aos="fade-up" data-aos-duration="1000">
@@ -190,6 +194,6 @@
       </section>
 
 </body>
-<script src="js/script.js"></script>
+<script src="js/loading.js"></script>
 <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
 </html>
