--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </a>
     </li>
        <li>
-        <a href="#">
+        <a href="/menu/Vaga de Emprego.pdf">
             <span><i class='bx bx-user'></i></span>
            <span class="letra">Trabalhe conosco</span> 
         </a>
