--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="menu-link" data-aos="fade-up" data-aos-duration="1000">
-          <a href="menu/cardapio chocco.pdf">Ver O Menu Completo</a>
+          <a href="menu/cardapio chocco expresso.pdf">Ver O Menu Completo</a>
         </div>
       </section>
 
