--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
             </ul>
           </div>
         </div>
+        <div class="direitos"> 
+          <p>@Chocco Expresso 2024. Todos os direitos reservados. Segunda a Sexta: 8h - 20h | Sábados e Domingos: 9h - 22h. <br> Mais que café, uma experiência.</p>
+        </div>
       </section>
 
 </body>
